# sentiment-oracle

./: .gitignore  README.md  requirements.txt  sentiment_analyzer.py  twitter_scraper.py
api/: .env  Cargo.toml  README.md  temp.txt  test_api.ps1
api/src/: main.rs
api/src/handlers/: mod.rs  sentiment_handlers.rs
api/src/models/: error.rs  mod.rs  sentiment.rs
api/src/services/: mod.rs  sentiment_service.rs  verification_service.rs
oracle-node/: Cargo.toml
oracle-node/src/: consensus.rs  data_sources.rs  main.rs  models.rs  solana_client.rs  validator.rs
oracle-publisher/: .gitignore  DEMO-README.md  compare_hashes.py  demo.py  verify_tampering.py
oracle-publisher/cli/: Cargo.toml
oracle-publisher/cli/src/: main.rs
oracle-publisher/program/: Cargo.toml
oracle-publisher/program/src/: lib.rs
