[package]
name = "sentiment-oracle-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4"
base64 = "0.21.0"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
tokio = { version = "1.28.1", features = ["full"] }
hex = "0.4.3"
dotenv = "0.15.0"
thiserror = "1.0"
anyhow = "1.0"

# These will be uncommented when integrating with Solana
# solana-client = "1.16.0"
# solana-sdk = "1.16.0"
