[package]
name = "price-oracle-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = "1.0"
base64 = "0.21"
hex = "0.4"
solana-client = "1.16"
solana-sdk = "1.16"
borsh = "0.10"
rand = "0.8"
async-trait = "0.1"

# For price oracle program
price-oracle-program = { path = "../oracle-publisher/program" }
