[package]
name = "sentiment-oracle-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sentiment Oracle Team"]

[dependencies]
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-cli-config = "1.16.0"
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
borsh = "0.10.3"
sha2 = "0.10.6"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
hex = "0.4.3"
sentiment-oracle-program = { path = "../program", features = ["no-entrypoint"] } 